--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-831.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇳 中国-986.7KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇳 中国-506.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-662.8KB/s(Youtube:不良林), server: 134.195.196.128, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-736.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-739.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇦 加拿大-821.6KB/s(Youtube:不良林), server: 134.195.196.128, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-651.0KB/s(Youtube:不良林), server: 134.195.196.128, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-921.4KB/s(Youtube:不良林), server: 134.195.196.128, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-876.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.43MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-3.09MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.34MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-831.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-662.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活3天)香港-3.96MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
       - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-739.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-821.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-651.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-921.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
