--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-986.7KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-736.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.69MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-876.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-6.43MB/s(Youtube:不良林), server: 103.173.255.228, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-3.09MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.85MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.34MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20020, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-550.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-393.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-506.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-183.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
+  - {name: 🇨🇦 加拿大-222.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-588.1KB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-680.6KB/s(Youtube:不良林), server: 120.233.151.171, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-986.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-736.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-876.9KB/s(Youtube:不良林)
-      - 🇻🇳 越南-6.43MB/s(Youtube:不良林)
-      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
