--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-550.6KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65095, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-393.3KB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-506.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-183.7KB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇦 加拿大-222.7KB/s(Youtube:不良林), server: 134.195.196.128, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇭🇰 香港-2.56MB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-420.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-384.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
   - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇨🇳 中国-588.1KB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇳 中国-680.6KB/s(Youtube:不良林), server: 120.233.151.171, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-550.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-393.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-506.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-183.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-222.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
