--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-2.56MB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 16b00fc9-a284-3063-90c9-de55a2b5cb61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇨🇳 中国-1.81MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-420.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.75.136.161, port: 9090, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-384.8KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-463.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-823.3KB/s(Youtube:不良林), server: 134.195.196.128, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇻🇳 越南-3.09MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.22MB/s(Youtube:不良林), server: 103.173.255.21, port: 28443, type: trojan, password: fade393a-2ffe-4d02-9492-e22a027dc611, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.85MB/s(Youtube:不良林), server: 134.195.196.128, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.20MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, skip-cert-verify: true}
   - {name: 🇨🇳 中国-588.1KB/s(Youtube:不良林), server: 120.233.151.171, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
-  - {name: 🇨🇳 中国-680.6KB/s(Youtube:不良林), server: 120.233.151.171, port: 8060, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: 120.233.151.171, port: 8020, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
   - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,35 +52,34 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -88,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -104,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -129,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-2.56MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-823.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-3.09MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.22MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-300.6KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-588.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-680.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
 rules:
